--- a/index.css
+++ b/index.css
@@ -1,12 +1,32 @@
-.row {
-  display: flex
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-size: 30px;
+  overflow: hidden;
 }
 
-.row > div {
-  margin: 5px;
+.page {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.top {
+  flex-grow: 0;
+  flex-shrink: 0;
   background-color: #EEEEEE;
 }
 
-.grow {
-  flex: 1;
+.body {
+  flex-grow: 1;
+  flex-shrink: 1;
+  overflow: auto;
+}
+
+.footer {
+  flex-grow: 0;
+  flex-shrink: 0;
+  background-color: #EEEEEE;
 }
