--- a/index.css
+++ b/index.css
@@ -22,11 +22,9 @@ html, body {
 .body {
   flex-grow: 1;
   flex-shrink: 1;
-  overflow: auto;
+  overflow: hidden;
+
+  display: flex;
+  flex-direction: column;
 }
 
-.footer {
-  flex-grow: 0;
-  flex-shrink: 0;
-  background-color: #EEEEEE;
-}
